--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
             gap: 20px;
             flex-direction: row-reverse;
             align-items: flex-start;
-            padding-left: 30px;
-            padding-right: 30px;
-            padding-top: 30px;
+            padding: 30px;
         }
         .test img {
             width: 400;
             height: auto;
+            display: block;
+            margin: auto;
         }
         a:link {color: red;}
         a:visited {color: red;}
@@ -43,7 +43,7 @@
 <body>
     <h1> Tuyên Ngôn Độc Lập </h1><hr>
     <div class="test">
-        <img src="img/anh_bac.png" alt="Ảnh Bác"><br>
+        
         <p>
         <audio controls>
             <source src="audio/Toàn văn- Chủ tịch Hồ Chí Minh đọc Tuyên ngôn Độc lập năm 1945 - Nghe giọng Bác Hồ chân thực nhất - YouTube.mp3" type="audio/mp3">
@@ -53,6 +53,7 @@
         Lời bất hủ ấy ở trong bản Tuyên ngôn độc lập năm 1776 của nước Mỹ. Suy rộng ra, câu ấy có ý nghĩa là: tất cả các dân tộc trên thế giới đều sinh ra bình đẳng; dân tộc nào cũng có quyền sống, quyền sung sướng và quyền tự do.<br>
         Bản Tuyên ngôn nhân quyền và dân quyền của Cách mạng Pháp năm 1791 cũng nói:<br>
         "Người ta sinh ra tự do và bình đẳng về quyền lợi, và phải luôn luôn được tự do và bình đẳng về quyền lợi".<br>
+         <img src="img/anh_bac.png" alt="Ảnh Bác"><br>
         Đó là những lẽ phải không ai chối cãi được.<br>
         Thế mà hơn tám mươi năm nay, bọn thực dân Pháp lợi dụng lá cờ tự do, bình đẳng, bác ái, đến cướp đất nước ta, áp bức đồng bào ta. Hành động của chúng trái hẳn với nhân đạo và chính nghĩa.<br>
         Về chính trị, chúng tuyệt đối không cho nhân dân ta một chút tự do dân chủ nào.<br>
@@ -70,6 +71,7 @@
         Trước ngày mồng 9 tháng 3, biết bao lần Việt minh đã kêu gọi người Pháp liên minh để chống Nhật. Bọn thực dân Pháp đã không đáp ứng, lại thẳng tay khủng bố Việt minh hơn nữa.<br>
         Thậm chí đến khi thua chạy, chúng còn nhẫn tâm giết nốt số đông tù chính trị ở Yên Bái và Cao Bằng.<br>
         Tuy vậy, đối với nước Pháp, đồng bào ta vẫn giữ một thái độ khoan hồng và nhân đạo. Sau cuộc biến động ngày mồng 9 tháng 3, Việt minh đã giúp cho nhiều người Pháp chạy qua biên thùy, lại cứu cho nhiều người Pháp ra khỏi nhà giam Nhật, và bảo vệ tính mạng và tài sản cho họ.<br>
+         <img src="img/chính phủ lâm thời.png" alt="Bác và các Chính phủ lâm thời"><br>
         Sự thật là từ mùa thu năm 1940, nước ta đã thành thuộc địa của Nhật, chứ không phải thuộc địa của Pháp nữa. Khi Nhật hàng Đồng minh thì nhân dân cả nước ta đã nổi dậy giành chính quyền lập nên nước Việt Nam Dân chủ Cộng hòa.<br>
         Sự thật là dân ta đã lấy lại nước Việt Nam từ tay Nhật, chứ không phải từ tay Pháp.<br>
         Pháp chạy, Nhật hàng, vua Bảo Đại thoái vị. Dân ta đã đánh đổ các xiềng xích thực dân gần một trăm năm nay để gây dựng nên nước Việt Nam độc lập. Dân ta lại đánh đổ chế độ quân chủ mấy mươi thế kỷ mà lập nên chế độ dân chủ cộng hòa.<br>
