--- a/index.html
+++ b/index.html
@@ -81,7 +81,9 @@
         Một dân tộc đã gan góc chống ách nô lệ của Pháp hơn tám mươi năm nay, một dân tộc đã gan góc đứng về phe Đồng minh chống phát-xít mấy năm nay, dân tộc đó phải được tự do ! Dân tộc đó phải được độc lập ! <br>
         Vì những lẽ trên, chúng tôi, Chính phủ Lâm thời của nước Việt Nam Dân chủ Cộng hòa, trịnh trọng tuyên bố với thế giới rằng:<br>
         Nước Việt Nam có quyền hưởng tự do và độc lập, và sự thật đã thành một nước tự do, độc lập. Toàn thể dân tộc Việt Nam quyết đem tất cả tinh thần và lực lượng, tính mạng và của cải để giữ vững quyền tự do, độc lập ấy.<br>
-        <a href="https://www.youtube.com/watch?v=34GKvR8nZus">▶ Video Toàn văn Bác Hồ đọc bản tuyên ngôn độc lập</a>
+        <a href="https://www.youtube.com/watch?v=34GKvR8nZus"
+        target="_blank"
+        rel="noopener noreferrer">▶ Video Toàn văn Bác Hồ đọc bản tuyên ngôn độc lập</a>
         </p>
     </div>
 </body>
